# Meta-Swarm-CSI

./: .env.example  README.md  docker-compose.yml  install.sh  uninstall.sh
config/: default.toml  topology.example.toml
docs/: INSTALL.md
lib/: common.sh  configure_swarm.sh  detect_services.sh  generate_keys.sh  install_docker.sh  install_nomad.sh  preflight.sh  provision_models.sh  setup_tls.sh  start_swarm.sh  wait_for_nomad.sh
swarm-orchestrator/: Dockerfile  README.md  pyproject.toml
swarm-orchestrator/src/orchestrator/: __init__.py  config.py  main.py
swarm-orchestrator/src/orchestrator/federation/: __init__.py  crypto.py  publisher.py  subscriber.py
swarm-orchestrator/src/orchestrator/llm/: __init__.py  prompts.py  summarizer.py
swarm-orchestrator/src/orchestrator/matrix/: __init__.py  client.py  transcript.py
swarm-orchestrator/src/orchestrator/models/: __init__.py  summary.py  topology.py
swarm-orchestrator/src/orchestrator/rag/: __init__.py  store.py
swarm-orchestrator/src/orchestrator/rounds/: __init__.py  controller.py
swarm-orchestrator/src/orchestrator/topology/: __init__.py  manager.py  murmuration.py
swarm-orchestrator/src/orchestrator/web/: __init__.py  events.py  server.py  state.py
swarm-orchestrator/src/orchestrator/web/static/: index.html
swarm-orchestrator/src/orchestrator/web/static/assets/: app.js  styles.css
swarm-orchestrator/tests/: conftest.py  test_crypto.py  test_event_bus.py  test_murmuration.py  test_round_controller.py  test_summarizer.py  test_summary_model.py  test_transcript_buffer.py  test_web_api.py
(+8 files in other folders)
