[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarm-orchestrator"
version = "0.1.0"
description = "Conversational Swarm Intelligence orchestrator for N.O.M.A.D."
requires-python = ">=3.11"
dependencies = [
    "matrix-nio[e2e]>=0.24.0",
    "PyNaCl>=1.5.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "structlog>=24.1.0",
    "apscheduler>=3.10.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
